<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SportThingsMain">

    <EditText
        android:id="@+id/edit_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/input_edit_text"
        android:hint="@string/input_edit_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="195dp">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:src="@drawable/healthy_food_02"/>

        <TextView
            android:id="@+id/textSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/sale_text"
            android:textColor="#C91B1B"
            android:textSize="35sp"
            android:fontFamily="serif"
            android:rotation="30"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textSale2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/sale_text"
            android:textColor="#EE0DBD"
            android:textSize="40sp"
            android:fontFamily="serif"
            android:rotation="-30"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/chooseTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:textSize="20sp"
        android:text="@string/select_item_spinner"
        android:textAlignment="viewEnd"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/bananas11"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/orderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_price_text"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/orderTextView"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="0.0"/>
        <TextView
            android:id="@+id/textDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/textPrice"
            android:layout_below="@+id/orderTextView"
            android:text="@string/currency_sign"
            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:text="@string/quantity_text"/>
        <Button
            android:id="@+id/buttonDecQuant"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityTextView"
            android:layout_toStartOf="@id/textQuantity"
            android:layout_marginEnd="15dp"
            android:background="#8AD06B"
            android:text="-"
            android:onClick="decQuantity"/>

        <TextView
            android:id="@+id/textQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonIncQuant"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/textQuantity"
            android:layout_below="@+id/quantityTextView"
            android:background="#8AD06B"
            android:text="+"
            android:onClick="incQuantity"/>
    </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#8AD06B"
        android:text="@string/add_to_cart_button"
        android:textSize="20sp"/>

</LinearLayout>